# safe-rl-nlp

./: .gitignore  CLAUDE.md  README.md
backend/: pyproject.toml  requirements.txt
backend/src/safe_rl_nlp/: __init__.py  contract.py  experiment.py  gradients.py  kkt.py  problem.py  result.py  scenarios.py
backend/src/safe_rl_nlp/solvers/: __init__.py  augmented_lagrangian.py  base.py  penalty.py  primal_dual.py  sqp_slsqp.py
backend/tests/: helpers.py  test_contract.py  test_experiment.py  test_kkt.py  test_problem.py  test_solvers.py
web/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/e2e/: smoke.spec.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/charts/: ChartFrame.tsx  ComparisonBars.tsx  LineSeriesChart.tsx  MethodCharts.tsx  TrajectoryMap.tsx  colors.ts
web/src/components/controls/: LanguageToggle.tsx  ScenarioSwitcher.tsx  ThemeToggle.tsx
web/src/components/export/: CopyBlock.tsx
web/src/components/layout/: Header.tsx
web/src/data/: results.json  results.sample.json
web/src/i18n/: LanguageProvider.tsx  en.ts  fa.ts
web/src/lib/: DataProvider.tsx  export-templates.ts  feasibility.ts  formulas.ts  geometry.ts  hooks.ts  results.ts  schema.ts  utils.ts
web/src/sections/: Comparison.tsx  Lagrangian.tsx  Model.tsx  Overview.tsx  Sqp.tsx
web/src/theme/: ThemeProvider.tsx
web/src/types/: index.ts  react-katex.d.ts
web/tests/: app.test.tsx  contract.integration.test.ts  graceful.test.tsx  lib.test.ts  setup.ts  test-utils.tsx
(+13 files in other folders)
