[project]
name = "safe-rl-nlp"
version = "0.1.0"
description = "Safe Reinforcement Learning as constrained Nonlinear Programming: Lagrangian/KKT + SQP, with numerical comparison."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26,<2.3",
    "scipy>=1.11,<1.15",
]

[project.optional-dependencies]
plots = ["matplotlib>=3.8,<3.10"]
test = ["pytest>=8.0,<9.0", "pytest-cov>=5.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
